@@ -128,6 +128,7 @@ text = "
 Francesco Gigli (Jaramir)
 Jordà Polo (ettin)
 Ruben Philipp Wickenhäuser (The Very Uhu)
+Zack Kleinfeld
 "
 [/about]
 
