@@ -61,6 +61,7 @@ Version 1.3-svn:
    * units can now have a recruit animations that will be played on unit recruit
    * units now have idle animations, played when they've been idle for some time
    * units now have leveling up animations
+   * units can now have victory animations,  usable with the WML tag 'victory_anim' 
    * [event]s can now be written also inside [era]s (the [event]s are included
      in every scenario played using that era)
    * new operation for set_variable : divide
